# oauth-django

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: main_learn-apps.yml
app/home/: urls.py  views.py
app/login/: models.py  urls.py  views.py
app/login/migrations/: 0001_initial.py  0002_alter_appuser_auth_user.py
app/static/css/: global.style.css  login.css  profile.css
login/: urls.py  views.py
oath/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html
templates/includes/: head.html  navigation.html  pre-loader.html  scripts.html
templates/layouts/: base-auth.html  base.html
templates/pages/: login.html  profile.html
