[tool.poetry]
name = "oath-django"
version = "0.1.0"
description = "Django application that use Github Oauth"
authors = ["Julio Quintero <jequinterope@unal.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.3"
python-dotenv = "^1.0.0"
oauthlib = "^3.2.2"
requests = "^2.31.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
